2018-07-03  Franz Holzinger <franz@ttproducts.de>
    * new feature: support for features. Address entry form is the first feature which is supported. This is supported by the Paypal Plus extension.
    * new feature: Show an error message if a requested payment extension has not been installed.
    * new feature: Support markers in the format ###TRANSACTOR_...### which represent the parameters coming from the payment gateways.
    * new requirement: PHP 5.6 because variable function paramters with token ... shall be used. The API has so many parameters. It should become easier to enhance the API methods.
    * new API: \JambageCom\Transactor\Api\Start::render

2018-05-25  Franz Holzinger <franz@ttproducts.de>
    * remove support for TYPO3 < 6.2

2018-05-09  Franz Holzinger <franz@ttproducts.de>
    * new feature: replace the locallang.xml files by locallang.xlf files

2018-05-02  Franz Holzinger <franz@ttproducts.de>
    * remove ext_autoload.php file because the autoloading is done by the composer

2018-02-26  Franz Holzinger <franz@ttproducts.de>
    * new requirement: version 0.7.0 requires PHP 5.5.0 and TYPO3 6.2 as a minimum.

2018-01-09  Franz Holzinger <franz@ttproducts.de>
    * new feature: use the state INIT_ABORT and the message ABORT if an initialization of a transaction went wrong for any reason. E.g. after a page reload a token or a transaction number can have expired. Then the transactor extension treat it in the same way as an IDLE state and shows the connection form again.

2017-12-23  Franz Holzinger <franz@ttproducts.de>
    * new feature: use configurable maximumCharacters for a limit of the characters of the note field
    * improvement for the GatewayFactory singleton interface
    * do not use XHTML by default. The new marker ###XHTML_SLASH### can be replaced by the XHMTL end slash.

2017-11-08  Franz Holzinger <franz@ttproducts.de>
    * new feature: pass the transactor parameter request id for notification urls