@@ -429,7 +429,7 @@ class GatewayProxy implements \JambageCom\Transactor\Domain\GatewayInterface
     }
 
     /**
-        * Returns any extra HTML attributes for the form tag to be used in mode GatewayMode::FORM.
+    * Returns any extra HTML attributes for the form tag to be used in mode GatewayMode::FORM.
     *
     * @return  string      Form submit button extra parameters
     * @access  public
@@ -444,13 +444,26 @@ class GatewayProxy implements \JambageCom\Transactor\Domain\GatewayInterface
 
     /**
     * Returns an array of field names and values which must be included as hidden
-    * fields in the form you render use mode GatewayMode::FORM.
+    * fields in the form you render. Use mode GatewayMode::FORM.
     *
     * @return	array		Field names and values to be rendered as hidden fields
     * @access	public
     */
     public function transactionFormGetHiddenFields () {
         $result = $this->getGatewayObj()->transactionFormGetHiddenFields();
+        return $result;
+    }
+
+    /**
+    * Returns an array of field names and values which must be included as script
+    * parameters in the form you render. Use mode GatewayMode::FORM.
+    * <script src="https://mywebsite.com" data-parameter-1="foo:bar"></script>
+    *
+    * @return	array		paramter names and values to be rendered as script parameters
+    * @access	public
+    */
+    public function transactionFormGetScriptParameters () {
+        $result = $this->getGatewayObj()->transactionFormGetScriptParameters();
         return $result;
     }
 
