@@ -9,7 +9,7 @@ $EM_CONF[$_EXTKEY] = array(
     'description' => 'This is a basic API to develop extensions which connect to different payment transaction gateways.',
     'category' => 'misc',
     'shy' => 0,
-    'version' => '0.7.0',
+    'version' => '0.7.1',
     'priority' => '',
     'loadOrder' => '',
     'module' => '',
